# gravsim

./: CMakeLists.txt  CMakePresets.json  README.md
include/glad/: glad.h
src/: main.cpp  plot.py  vis.cpp
